@@ -1,8 +1,10 @@
-CHANGES.txt - 2.0.0 - 2014-10-09
+CHANGES.txt - 2.0.1 - 2014-10-20
 --------------------------------
 
 CHANGES IN CUPS V2.0.1
 
+	- Security: SSLv3 is now disabled by default to protect against the
+	  POODLE attack (STR #4476)
 	- Fixed a crash in ippAttributeString (<rdar://problem/17903871>)
 	- RPMs did not build (STR #4490)
 
